force-app/main/default/objects/FIN_RetroactiveAdjustment__c/FIN_RetroactiveAdjustment__c.object-meta.xml
<CustomObject>
    <label>Retroactive Adjustment</label>
    <nameField>
        <displayFormat>RA-{0000000000}</displayFormat>
        <label>Retroactive Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retroactive Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>