force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_Account__c.field-meta.xml
<CustomField>
    <fullName>FIN_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retroactive Adjustments</relationshipLabel>
    <relationshipName>Retroactive_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>