force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_Contract__c.field-meta.xml
<CustomField>
    <fullName>FIN_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Retroactive Adjustments</relationshipLabel>
    <relationshipName>Retroactive_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>