force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_CurrentPaidAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_CurrentPaidAmount__c</fullName>
    <label>Current paid amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>