force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_DepositDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_DepositDate__c</fullName>
    <label>Deposit Date</label>
    <type>Date</type>
</CustomField>