force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_DistributionAmountNetofTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_DistributionAmountNetofTaxAmount__c</fullName>
    <label>Distribution Amount - Net of Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>