force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_DistributionDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_DistributionDate__c</fullName>
    <label>Distribution Date</label>
    <type>Date</type>
</CustomField>