force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_EventEndDateAdj__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventEndDateAdj__c</fullName>
    <label>Event End Date</label>
    <type>Date</type>
</CustomField>