force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_EventStartDateAdj__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventStartDateAdj__c</fullName>
    <label>Event Start Date</label>
    <type>Date</type>
</CustomField>