force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_FeeGrossAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeGrossAmount__c</fullName>
    <label>Fee gross amount</label>
    <precision>17</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>