force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_FeeTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeTaxAmount__c</fullName>
    <label>Fee tax amount</label>
    <precision>17</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>