force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>FIN_Gross_Amount__c</fullName>
    <label>Ticket Component Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>