force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_MerchGrossAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_MerchGrossAmount__c</fullName>
    <label>Merch Gross Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>