force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_MerchTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_MerchTaxAmount__c</fullName>
    <label>Merch Tax Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>