force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_Order__c.field-meta.xml
<CustomField>
    <fullName>FIN_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Retroactive Adjustments</relationshipLabel>
    <relationshipName>Retroactive_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>