force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>FIN_OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Transactions</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Retroactive Adjustments</relationshipLabel>
    <relationshipName>Retroactive_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>