force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_OrderStartDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_OrderStartDate__c</fullName>
    <label>Order Start Date</label>
    <type>Date</type>
</CustomField>