force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_Payment__c.field-meta.xml
<CustomField>
    <fullName>FIN_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>FIN_Payment__c</referenceTo>
    <relationshipLabel>Retroactive Adjustments</relationshipLabel>
    <relationshipName>Retroactive_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>