force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_Quantity__c.field-meta.xml
<CustomField>
    <fullName>FIN_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>