force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_ReferencePrice__c.field-meta.xml
<CustomField>
    <fullName>FIN_ReferencePrice__c</fullName>
    <label>Reference Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>