force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>FIN_Settlement_Date__c</fullName>
    <label>Settlement Date</label>
    <type>Date</type>
</CustomField>