force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>FIN_Tax_Amount__c</fullName>
    <label>Ticket Component Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>