force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_Total_Sales_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>FIN_Total_Sales_Gross_Amount__c</fullName>
    <label>Total Sales Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>