force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalPrice__c</fullName>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>