force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_Type__c.field-meta.xml
<CustomField>
    <fullName>FIN_Type__c</fullName>
    <formula>IF (NOT(ISBLANK(FIN_AdjustmentAmount__c)), &apos;Financial&apos; , &apos;Statistical&apos;)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>