force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>FIN_UnitPrice__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>