force-app/main/default/objects/FIN_RetroactiveAdjustment__c/fields/FIN_User__c.field-meta.xml
<CustomField>
    <fullName>FIN_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Retroactive_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>