force-app/main/default/objects/FIN_RetroactiveAdjustment__c/recordTypes/FIN_Event.recordType-meta.xml
<RecordType>
    <fullName>FIN_Event</fullName>
    <active>true</active>
    <label>Event</label>
</RecordType>