force-app/main/default/objects/FIN_RetroactiveAdjustment__c/recordTypes/FIN_Order.recordType-meta.xml
<RecordType>
    <fullName>FIN_Order</fullName>
    <active>true</active>
    <label>Order</label>
</RecordType>