force-app/main/default/objects/FIN_RetroactiveAdjustment__c/recordTypes/FIN_OrderProduct.recordType-meta.xml
<RecordType>
    <fullName>FIN_OrderProduct</fullName>
    <active>true</active>
    <label>Order Product</label>
</RecordType>