force-app/main/default/objects/FIN_RetroactiveAdjustment__c/recordTypes/FIN_Payment.recordType-meta.xml
<RecordType>
    <fullName>FIN_Payment</fullName>
    <active>true</active>
    <label>Payment</label>
</RecordType>