force-app/main/default/objects/FIN_RetroactiveAdjustment__c/recordTypes/FIN_PaymentDistribution.recordType-meta.xml
<RecordType>
    <fullName>FIN_PaymentDistribution</fullName>
    <active>true</active>
    <label>Payment Distribution</label>
</RecordType>