force-app/main/default/objects/FIN_RetroactiveAdjustment__c/validationRules/Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(FIN_AdjustmentAmount__c),
ISBLANK(FIN_OrderStartDate__c
)
)</errorConditionFormula>
    <errorMessage>Either Adjustment Amount or Order Start Date field must be populated.</errorMessage>
</ValidationRule>