force-app/main/default/objects/FIN_RetroactiveAdjustment__c/validationRules/Required_Only_One_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Only_One_Field</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(
        ISBLANK(FIN_AdjustmentAmount__c)
        ),
     NOT(
        ISBLANK(FIN_OrderStartDate__c
        )
    )
)</errorConditionFormula>
    <errorMessage>Either Adjustment Amount or Order Start Date field must be populated.</errorMessage>
</ValidationRule>