force-app/main/default/objects/FIN_RetroactiveAdjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_Order__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>FIN_InvoiceLine__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>