force-app/main/default/objects/FIN_RetroactiveAdjustment__c/listViews/OrdProduct_Financial_Retroactive_Changes.listView-meta.xml
<ListView>
    <fullName>OrdProduct_Financial_Retroactive_Changes</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FIN_OrderProduct__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>FIN_Type__c</field>
        <operation>equals</operation>
        <value>Financial</value>
    </filters>
    <label>SalesTrans Financial Retroactive Changes</label>
</ListView>