force-app/main/default/objects/FIN_RetroactiveAdjustment__c/listViews/PayDistr_Statistical_Retroactive_Changes.listView-meta.xml
<ListView>
    <fullName>PayDistr_Statistical_Retroactive_Changes</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FIN_PaymentDistribution__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>FIN_Type__c</field>
        <operation>equals</operation>
        <value>Statistical</value>
    </filters>
    <label>PayDistr Statistical Retroactive Changes</label>
</ListView>